--- a/Mohseni.ipynb
+++ b/Mohseni.ipynb
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The last figure shows that the number of houses is larger in ligher areas. In other words, the density of houses is larger in ligher colors.\n",
+    "The last figure shows that the number of houses is larger in lighter areas. In other words, the density of houses is larger in lighter colors.\n",
     "Next, we will create a T matrix 2500 by 2 which shows different points in 5000 by 5000 area. For example our points are (50,50), (150,50), .... So both x and y change from 50 to 4950 with step=100."
    ]
   },
