--- a/Mohseni.ipynb
+++ b/Mohseni.ipynb
@@ -19,9 +19,9 @@
     "Blu, as an online bank, wants to see how much people spend on transportation to a regular bank. Assume the banks are located in the following locations:\n",
     "A: 2000, 2500\n",
     "B: 4200, 4000\n",
-    "C: 3500,500\n",
-    "D: 1000,4200\n",
-    "E: 700,500\n",
+    "C: 3500, 500\n",
+    "D: 1000, 4200\n",
+    "E: 700, 500\n",
     "When going to a bank, people choose the nearest bank available. If it is less than 500 meters away, it would cost 1 unit of money to get there, if it is less than a kilometer away it costs 3 and otherwise it costs 5 units of money to get there. "
    ]
   },
@@ -34,7 +34,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# to make this notebook's output stable across runs\n",
+    "# To make this notebook's output stable across runs\n",
     "np.random.seed(123)\n",
     "\n",
     "# To plot pretty figures\n",
@@ -76,8 +76,8 @@
     "data1 = np.random.normal(0, 500, (2000,2))\n",
     "i=0\n",
     "List=[]\n",
-    "#For 3/4 houses that are distributed normally around the center with SD=1250, we should\n",
-    "#make sure that they are located within the square of 5000 by 5000!\n",
+    "# For 3/4 houses that are distributed normally around the center with SD=1250, we should\n",
+    "# make sure that they are located within the square of 5000 by 5000!\n",
     "while i<12000:\n",
     "    r = np.random.normal(0, 1250)\n",
     "    if abs(r) <= 2500:\n",
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we plot the houses and the banks, and fill the areas with different costs with different colors. For the houses located in red areas, the transportation cost is 1 unit of money. For the houses located in green areas, the transportation cost is 3 units of money and finally the houses in white areas should pay 5 units of monet to go to the bank."
+    "Next, we plot the houses and the banks, and fill the areas with different costs with different colors. For the houses located in red areas, the transportation cost is 1 unit of money. For the houses located in green areas, the transportation cost is 3 units of money and finally the houses in white areas should pay 5 units of money to go to the bank."
    ]
   },
   {
@@ -401,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we calculate the distance of each point to all of the 5 banks (distance2)."
+    "Next, we calculate the distance of each point to all of the 5 banks (Distance2)."
    ]
   },
   {
@@ -550,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"blu\" should focuses more on lighter colors in cream/reddish as they have higher values for \"density*cost\"."
+    "\"blu\" should focus more on lighter colors in cream/reddish as they have higher values for \"density*cost\"."
    ]
   },
   {
@@ -564,14 +564,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I think based on the \"Adver\" matrix that we alreay created, the best location for the bank is where the summation of values within a circle of radius 500 has maximum value. In other words, the bank should be located somewhere which leads to maximum reduction in \"density*cost\""
+    "I think based on the \"Adver\" matrix that we alreay created, the best location for the bank is where the summation of values within a circle of radius 500 has maximum value. In other words, the bank should be located somewhere which leads to maximum reduction in \"density*cost\"."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will consider a square filter 10 by 10 and we will scan the \"Adver\" matrix and we find the summation. The best location is where the summantion is maximum."
+    "Next, we will consider a square filter 10 by 10 and we will scan the \"Adver\" matrix and we find the summation. The best location is where the summation is maximum."
    ]
   },
   {
@@ -2612,7 +2612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5)\tGroup all movies into different subgroups based on budget, revenue and popularity. (Drop the movies with budget or revenue lower than 10000, these are unknown values)\n",
+    "5)\tGroup all movies into different subgroups based on budget, revenue and popularity. (Drop the movies with budget or revenue lower than 10000, these are unknown values).\n",
     "Explain how you choose the number of these groups. Can you provide an explanation about each group?"
    ]
   },
@@ -3320,7 +3320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the previous two figures, it seems that the most wired movies are these:\n",
+    "Based on the previous two figures, it seems that the most wired movies are:\n",
     "1. In last figure, the red one which is located right hand side (i.e. having maximum budget).\n",
     "2. In last figure, the blue one which is located on top (i.e. having maximum runtime).\n",
     "These two points (movies) are far from other points so we would consider them as outlier (concept of \"outlier detection\" or \"anomaly detection\").\n",
